SUBDIRS = src doc
ACLOCAL_AMFLAGS = -I m4

nobase_include_HEADERS = m4/.dummy \
			 autogen.sh \
			 tirpc/getpeereid.h \
			 tirpc/intrinsic.h \
			 tirpc/namespace.h \
			 tirpc/netconfig.h \
			 tirpc/reentrant.h \
			 tirpc/un-namespace.h \
			 tirpc/misc/abstract_atomic.h \
			 tirpc/misc/epoll.h \
			 tirpc/misc/os_epoll.h \
			 tirpc/misc/event.h \
			 tirpc/misc/portable.h \
			 tirpc/misc/socket.h \
			 tirpc/misc/stdio.h \
			 tirpc/misc/timespec.h \
			 tirpc/misc/rbtree_x.h \
			 tirpc/misc/rbtree.h \
			 tirpc/misc/opr_queue.h \
			 tirpc/misc/opr.h \
			 tirpc/misc/queue.h \
			 tirpc/rpcsvc/crypt.x \
			 tirpc/rpcsvc/crypt.h \
			 tirpc/rpc/auth_unix.h \
			 tirpc/rpc/auth_kerb.h \
			 tirpc/rpc/auth.h \
			 tirpc/rpc/auth_inline.h \
			 tirpc/rpc/auth_gss.h \
			 tirpc/rpc/auth_des.h \
			 tirpc/rpc/clnt_stat.h \
			 tirpc/rpc/clnt_soc.h \
			 tirpc/rpc/clnt.h \
			 tirpc/rpc/des.h \
			 tirpc/rpc/des_crypt.h \
			 tirpc/rpc/gss_internal.h \
			 tirpc/rpc/nettype.h \
			 tirpc/rpc/pmap_rmt.h \
			 tirpc/rpc/pmap_prot.h \
			 tirpc/rpc/pmap_clnt.h \
			 tirpc/rpc/raw.h \
			 tirpc/rpc/rpc_msg.h \
			 tirpc/rpc/rpc_dplx.h \
			 tirpc/rpc/rpc.h \
			 tirpc/rpc/rpcent.h \
			 tirpc/rpc/rpc_com.h \
			 tirpc/rpc/rpcb_prot.x \
			 tirpc/rpc/rpcb_prot.h \
			 tirpc/rpc/rpcb_clnt.h \
			 tirpc/rpc/svc_soc.h \
			 tirpc/rpc/svc.h \
			 tirpc/rpc/svc_dg.h \
			 tirpc/rpc/svc_auth.h \
			 tirpc/rpc/svc_rqst.h \
			 tirpc/rpc/tirpc_compat.h \
			 tirpc/rpc/types.h \
			 tirpc/rpc/xdr.h \
			 tirpc/rpc/xdr_inline.h \
			 tirpc/rpc/xdr_vrec.h

pkgconfigdir=$(libdir)/pkgconfig
pkgconfig_DATA = libntirpc.pc
